--- a/docs/_layouts/basic-page-with-footer-links.html
+++ b/docs/_layouts/basic-page-with-footer-links.html
@@ -12,42 +12,19 @@
         <div id="layoutSidenav">
             <div id="layoutSidenav_content">
                 <main class="page-detail-wrapper">
-                    <h1 class="page-title">GitHub Environment Variable Setup Guide</h1>
-                    <div class="page-blurb">On this page, you will learn how to add the correct environment variables to your file.</div>
+                    <h1 class="page-title">{{ page.title }}</h1>
+                    <div class="page-blurb">{{ page.pageDescription }}</div>
 
                     <div class="page-body-text">
-                        <h2>Details</h2>
-                        <p>This is where you'll add and populate your environmental variables file for GitHub.</p>
-
-                        <h2>Instructions</h2>
-                        <ol>
-                            <li>
-                                Add the following section to your environment variable file. This is the same file 
-                                mentioned <a href="env-var-setup-guide.html">in step 2</a>. Adding the following variables allows 
-                                the agent to access your GitHub data:
-                                <br/>
-                                <p class="code-block"><code>
-                                    GITHUB_TOKEN=...
-                                </code></p>
-                                <li>
-                                    Create a personal access token in GitHub, following the instructions 
-                                    <a href="https://docs.github.com/en/github/authenticating-to-github/keeping-your-account-and-data-secure/creating-a-personal-access-token">here</a>. 
-                                    Use this token as the value for <code>`GITHUB_TOKEN`</code>.
-                                </li>
-                                <li>
-                                    If you have additional systems not yet configured in your environment variable file, refer back to 
-                                    <a href="env-var-setup-guide.html">step 2</a> to set up your other systems.
-                                </li>
-                            </li>
-                        </ol>
-
+                        {{ content }}
                     </div>
+
                     <div class="nav-arrows">
-                        <span class="previous-page">
-                            <a href="env-var-setup-guide.html"><i class="fas fa-angle-left"></i>&nbsp;&nbsp;Step 2: Create environment variable file </a>
+                        <span class="previous-page" style="{{ page.previousPageStyle }}">
+                            <a href="{{ page.previousPageLink }}"><i class="fas fa-angle-left"></i>&nbsp;&nbsp; {{ page.previousPage }}</a>
                         </span>
-                        <span class="next-page">
-                            <a href="network-config-setup-guide.html">Step 3: Ensure proper network configuration &nbsp;&nbsp;<i class="fas fa-angle-right"></i></a>
+                        <span class="next-page" style="{{ page.nextPageStyle }}">
+                            <a href="{{ page.nextPageLink }}">{{ page.nextPage }} &nbsp;&nbsp;<i class="fas fa-angle-right"></i></a>
                         </span>
                     </div>
                 </main>
@@ -80,7 +57,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
     <script type="text/javascript">
         $(document).ready(async function() {
-            // Get content from index.html
+            // Get index.html content
             var templates = document.createElement('template');
             const response = await fetch('index.html');
             const result = await response.text();
@@ -88,7 +65,6 @@
 
             // Get nav bar template from index.html and put it on the page
             var template = templates.content.querySelector('#navTemplate'); 
-            console.log(template);
             var clone = template.content.cloneNode(true);
             document.getElementById("layoutSidenav").appendChild(clone);
         });
