--- a/docs/_layouts/basic-page.html
+++ b/docs/_layouts/basic-page.html
@@ -12,49 +12,11 @@
         <div id="layoutSidenav">
             <div id="layoutSidenav_content">
                 <main class="page-detail-wrapper">
-                    <h1 class="page-title">Jira Setup Guide</h1>
-                    <div class="page-blurb">On this page, you will find a step-by-step guide on how to setup the JF agent 
-                    to work with Jira. If you want your Git instance to work with the agent, see the setup guide corresponding
-                    to the type of Git instance you have - it will include Jira instructions as well.</div>
+                    <h1 class="page-title">{{ page.title }}</h1>
+                    <div class="page-blurb">{{ page.pageDescription }}</div>
 
                     <div class="page-body-text">
-                        <h2>Details</h2>
-                        <p>This is where you'll add and populate your environmental variables file for GitLab.</p>
-
-                        <h2>Instructions</h2>
-                        <ol>
-                            <li>
-                                Add the following section to your environment variable file. This is the same file 
-                                mentioned <a href="env-var-setup-guide.html">in step 2</a>. Adding the following variables allows 
-                                the agent to access your Jira data:
-                                <p class="code-block"><code>
-                                    JIRA_USERNAME=...<br/>
-                                    JIRA_PASSWORD=...
-                                </code></p>
-                            </li>
-                                <li>Get a value for <code>`JIRA_USERNAME`</code>. Choose a Jira username that has 
-                                read access to all of the projects you would like to use in Jellyfish.</li>
-                                <li>
-                                    The value for <code>`JIRA_PASSWORD`</code> will vary. If you are using Jira server, 
-                                    enter the password for the user specified with <code>`JIRA_USERNAME`</code>. If you are 
-                                    using Jira Cloud, create a personal API token, following the instructions 
-                                    <a href="https://support.atlassian.com/atlassian-account/docs/manage-api-tokens-for-your-atlassian-account/">here</a>
-                                    to obtain one.
-                                </li>
-                            </li>
-                            <li>
-                                If you have additional systems not yet configured in your environment variable file, refer back to 
-                                <a href="env-var-setup-guide.html">step 2</a> to set up your other systems.
-                            </li>
-                        </ol>
-                    </div>
-                    <div class="nav-arrows">
-                        <span class="previous-page">
-                            <a href="env-var-setup-guide.html"><i class="fas fa-angle-left"></i>&nbsp;&nbsp;Step 2: Create environment variable file </a>
-                        </span>
-                        <span class="next-page">
-                            <a href="network-config-setup-guide.html">Step 3: Ensure proper network configuration &nbsp;&nbsp;<i class="fas fa-angle-right"></i></a>
-                        </span>
+                        {{ content }}
                     </div>
                 </main>
 
@@ -94,7 +56,6 @@
 
             // Get nav bar template from index.html and put it on the page
             var template = templates.content.querySelector('#navTemplate'); 
-            console.log(template);
             var clone = template.content.cloneNode(true);
             document.getElementById("layoutSidenav").appendChild(clone);
         });
