working version w accordion

--- a/docs/_layouts/index.html
+++ b/docs/_layouts/index.html
@@ -43,9 +43,8 @@
                                 <div class="collapse" id="collapseGuides" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                     <nav class="sb-sidenav-menu-nested nav">
                                         <a class="nav-link" href="setup-guide.html">Getting Started</a>
-                                        <a class="nav-link" href="yaml-config-setup-guide.html">Step 1: Create YAML configuration file</a>
-                                        <a class="nav-link" href="env-var-setup-guide.html">Step 2: Create environment variable file</a>
-                                        <a class="nav-link" href="network-config-setup-guide.html">Step 3: Ensure proper network configuration</a>
+                                        <a class="nav-link" href="configuration-setup-guide.html">Step 1: Configure the Agent</a>
+                                        <a class="nav-link" href="network-config-setup-guide.html">Step 2: Ensure proper network configuration</a>
                                     </nav>
                                 </div>
                                 <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseRunning" aria-expanded="false" aria-controls="collapseRunning">
